Fix spacing

--- a/less/style.less
+++ b/less/style.less
@@ -125,15 +125,16 @@
   .views-field-field-location {
     margin: .25em 0 .5em 0;
     line-height: 1.3em;
-    font-size: 1.25em;
+    font-size: 1.4em;
+    font-family: @font-family-serif;
     font-style: italic;
   }
   .views-field-field-image img {
     .white-border();
   }
   .views-field-title {
-    margin: .5em 0;
-    font-size: 1.2em;
+    margin: .6em 0 .3em;
+    font-size: 1.3em;
     text-transform: uppercase;
   }
   .views-field-field-opening-dates {
