--- a/less/variable-overrides.less
+++ b/less/variable-overrides.less
@@ -65,7 +65,7 @@
 // Basics of a navbar
 @navbar-height:                    40px;
 @navbar-margin-bottom:             0;
-@navbar-padding-horizontal:        floor((@grid-gutter-width / 2)) - 15px;
+@navbar-padding-horizontal:        floor((@grid-gutter-width / 2)) - 7px;
 
 @navbar-default-bg:                transparent;
 
@@ -75,6 +75,13 @@
 @navbar-default-link-active-color:         #333;
 @navbar-default-link-active-bg:            #edeef0;
 
+
+//== Navs
+//
+//##
+
+//=== Shared nav styles
+@nav-link-padding:                          10px 7px;
 
 
 //== Pagination
